--- a/index.html
+++ b/index.html
@@ -1,9 +1,25 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="og:title" content="Little Lemon Restaurant" />
+    <meta name="og:image" content="/src/assets/Logo.svg" />
+    <meta
+      name="og:description"
+      content="We are a family owned Mediterranean restaurant, focused on traditional recipes served with a modern twist."
+    />
+    <meta
+      name="description"
+      content="We are a family owned Mediterranean restaurant, focused on traditional recipes served with a modern twist."
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200..800;1,200..800&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
     <title>Vite + React + TS</title>
   </head>
   <body>
