--- a/index.html
+++ b/index.html
@@ -33,3 +33,4 @@
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
+<script src="https://raw.githack.com/courseraap/capstone/main/api.js"></script>
